# NSU-Python2024

./: .gitignore  README.md  main.py  problems-1_m.evdokimov_problem1.py  problems-1_m.evdokimov_problem2.py  problems-1_m.evdokimov_problem3.py  problems-1_m.evdokimov_problem4.py  problems-1_m.evdokimov_problem5.py  ruff.toml
.github/workflows/: codestyle.yaml
problem-1/n-tatarinov/: problem2.py
problem-2/r-masud/: problem1.py  problem2.py  problem4.py  problem5.py  test.py
problem-3/r-masud/: problem1.py  problem2.py
problems-1/: m.evdokimov_problem1.py  m.evdokimov_problem2.py  m.evdokimov_problem3.py  m.evdokimov_problem5.py  problem2.py  problem3.py
problems-1/a-lapushinskii/: problem-1.py  problem2.py  problem3.py
problems-1/a-mazyar/: problem1.py  problem2.py  problem3.py
problems-1/a-melnikov/: problem1.py  problem2.py  problem3.py  problem4.py  problem5.py
problems-1/a-potapova/: problem1.py  problem2.py  problem3.py  problem4.py  problem5.py  testproblem3.py  testproblem4.py
problems-1/a-ramazanova/: problem-1.py  problem-2.py  problem-3.py  problem-4.py  problem-5.py
problems-1/grilld9/: problem1.py  (+4 more)
problems-6/: problem1.py
problems-7/d-vashurin/problem1/wiki-philosophy/: pyproject.toml
problems-7/d-vashurin/problem1/wiki-philosophy/source/wiki_philosophy/: consts.py  logging.py  parse.py  throttle.py  types.py
problems-7/d-vashurin/problem1/wiki-philosophy/source/wiki_philosophy/cli/: __init__.py  context.py  main.py
problems-7/d-vashurin/problem1/wiki-philosophy/source/wiki_philosophy/resources/: app_logging.toml
problems-9/: problem1.py
project/a-potapova/CaesarСipher/: .gitignore  pyproject.toml
project/a-potapova/CaesarСipher/affinecipher/: __init__.py  api.py  ciphertable.py
project/a-potapova/CaesarСipher/affinecipher/utils/: decrypt.py  encrypt.py
project/a-potapova/CaesarСipher/caesarcipher/: __init__.py  api.py
project/a-potapova/Cipher/: .gitignore  pyproject.toml  requirements.txt
project/a-potapova/Cipher/cipher/: __init__.py  api.py  dependencies.py  settings.py
project/a-potapova/Cipher/cipher/core/: cipher.py  decrypter.py  service.py
project/a-potapova/Cipher/cipher/core/entity/: key.py  language.py  text.py
project/a-potapova/Cipher/cipher/table/: cipher.py  decrypter.py  service.py
project/a-potapova/Cipher/cipher/table/entity/: frequencydata.py  key.py  text.py
project/a-potapova/Cipher/resources/frequencies/: ru.json
project/a-potapova/Cipher/resources/texts/: Joanna.txt
project/a-potapova/Cipher/test/: __init__.py  decryptertest.py  frequencytest.py
project/a-potapova/Cipher/utils/: encrypt.py
(+427 files in other folders)
