[tool.poetry]
name = "affineсipher"
version = "0.1.0"
description = ""
authors = ["coffe <a.potapova8@g.nsu.ru>"]
readme = "README.md"
packages = [{include = "affinecipher"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.1"
logging = "^0.4.9.6"
uvicorn = "^0.29.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.5"
mypy = "^1.9.0"

[tool.poetry.scripts]
"ac" = "affinecipher:entrypoint"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
