[tool.poetry]
name = "Cipher"
version = "0.1.0"
description = ""
authors = ["coffe <a.potapova8@g.nsu.ru>"]
readme = "README.md"
packages = [{include = "cipher"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"
pyspellchecker = "^0.8.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.5"
mypy = "^1.9.0"

[tool.poetry.scripts]
"cipher" = "cipher:entrypoint"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
